Sun Nov  6 11:48:55 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/net/smtp/test_smtp.rb (test_tls_connect, test_tls_connect):
	  use Socket.tcp_server_sockets in case localhost is resolved to ::1.

Sun Nov  6 11:49:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/irb.rb (IRB::Irb#run): split from IRB.start.

Sun Nov  6 11:45:11 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/e2mmap.rb (E2MM.def_exception): remove old definition if
	  exists so that works multiple times.

Sun Nov  6 10:03:00 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* test/ruby/test_optimization.rb (test_tailcall_interrupted_by_sigint):
	  don't use sleep to run faster.

Sun Nov  6 09:58:47 2016  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* process.c (rb_exec_fillarg): honor the given path environment
	  variable.  [ruby-core:53103] [Bug #8004]

Sun Nov  6 01:52:31 2016  Akira Matsuda  <ronnie@dio.jp>

	* lib/erb.rb: Alias regist_scanner to register_scanner

Sun Nov  6 01:39:36 2016  Shugo Maeda  <shugo@ruby-lang.org>

	* compile.c (tailcallable_p): disable tail call optimization for
	  toplevel, eval, and load to avoid SEGV when interrupted by SIGINT.
	  [ruby-core:76327] [Bug #12576]

Sun Nov  6 01:28:41 2016  Koichi Sasada  <ko1@atdot.net>

	* vm_insnhelper.h: rename REG_(CFP|PC|SP|EP) to VM_REG_....
	  [Bug #12527]

	* vm_exec.c: ditto.

Sun Nov  6 00:25:11 2016  Sho Hashimoto  <sho.hsmt@gmail.com>

	* enumerator.c (InitVM_Enumerator): Enumerator::Lazy#chunk_while
	  defined.  [Fix GH-1186]
	  https://github.com/ruby/ruby/pull/1186

Sun Nov  6 00:22:51 2016  Kazuki Tsujimoto  <kazuki@callcc.net>

	* vm_eval.c (vm_call0_cfunc_with_frame): pass method id to
	  dtrace hook. follow up r56592.

Sun Nov  6 00:06:38 2016  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb (Resolv::LOC::Coord.create): fixed.
	  [ruby-core:72567] [Bug #11912] fixed by Eric Wong and Kazuhiro
	  NISHIYAMA.

Sun Nov  6 00:03:09 2016  NARUSE, Yui  <naruse@ruby-lang.org>
